    * 4140 FIX: Views: Download agent output action was not displayed correctly on SNMP+Agent hosts

    WATO:
    * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...
    * 4044 Display host/service notification delay with d/h/m/s, not with fractions of minute
    * 4075 Activate Changes has been reworked...
    * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
    * 4041 FIX: Fix exception when editing global configuration settings...
    * 3975 FIX: Improved error handling when trying to edit not existing global setting
    * 3976 FIX: Fixed broken link in LDAP automatic sync help text
    * 3977 FIX: Fixed poping up changes button in sidebar snapin after a change
    * 3982 FIX: Some MKPs created with WATO could not be uploaded to the Check_MK Exchange
    * 4045 FIX: Tactical Overview: do not count OK events as problems
    * 4068 FIX: Fixed possible exception in case of wrong automation secrets between multiple sites...
    * 3992 FIX: netapp_api_connection: fixed GUI display bug when editing rules
    * 4076 FIX: Git integration: Using mail address of user in author info
    * 4077 FIX: Fixed "Request URI too long" when cloning role after editing another one
    * 4079 FIX: Improved error handling in case a WATO folder can not be written
    * 4082 FIX: Icon selector: Fixed exception in case non images are saved in icon folder
    * 4084 FIX: Improved error handling in case of broken hosts.mk files
    * 4130 FIX: Improved error handling when trying to edit not existant rules
    * 4131 FIX: Fixed broken WATO site login when using password containing special characters...
    * 4133 FIX: Do not suppress site specific global issues during WATO activation
    * 4134 FIX: Unified ineffective rulesets view with other ruleset list views
    * 3999 FIX: Added core restart note to bulk host rename page

    Notifications:
    * 4042 FIX: Fix missing From address in synchronous SMTP notifications...
